fix for quick ticket message wrap regression - closes #197
git-svn-id: https://svn.apache.org/repos/asf/incubator/bloodhound/trunk@1383350 13f79535-47bb-0310-9956-ffa450edef68

--- a/bloodhound_theme/bhtheme/htdocs/bloodhound.css
+++ b/bloodhound_theme/bhtheme/htdocs/bloodhound.css
@@ -248,6 +248,10 @@ textarea.wikitext {
   top: 5px;
 }
 
+#qct-box p {
+  white-space: normal;
+}
+
 /* @group Generic rules */
 
 .full-x {
